feat: add navigation

--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 </head>
 
 <body>
-    <header>
+    <nav>
         <figure>
-            <img src="" alt="">
+            <img class='nav--foto' src="/img/foto.JPG" alt="Фото Денежкина Ильи">
+            <figcaption>
+                <h2>Ilya</h2>
+                <h2>Denezhkin</h2>
+            </figcaption>
         </figure>
-        <h1></h1>
-    </header>
+        <ul>
+            <li><a class='btn--nav' href="#contacts">Contacts</a></li>
+            <li><a class='btn--nav' href="#job--objective">Job objective</a></li>
+            <li><a class='btn--nav' href="#skills">Skills</a></li>
+            <li><a class='btn--nav' href="#study">Study</a></li>
+            <li><a class='btn--nav' href="#language">Language</a></li>
+        </ul>
+    </nav>
     <main>
         <section>
             <h2></h2>
