--- a/index.html
+++ b/index.html
@@ -25,30 +25,72 @@
         </ul>
     </nav>
     <main>
-        <section>
-            <h2></h2>
-            <hr>
-            <p></p>
+        <header>
+            <h1>My character voice(CV)</h1>
+        </header>
+        <!--Section Contacts-->
+        <section class="cv--info">
+            <a name="contacts"></a>
+            <h3>Contacts</h3>
+            <hr />
+            <ul>
+                <li><strong>Address: </strong>30 Osennya, apt 1, Moscow, Russia</li>
+                <li><strong>Tel. </strong><a href="tel:+79162009825">+7(916)2009825</a></li>
+                <li><strong>Marital status: </strong>Unmarried</li>
+                <li><strong>Date of birth: </strong>16th September 1993</li>
+                <li><strong>Email:</strong><a href="email:denezhkinia@ya.ru">denezhkinia@ya.ru</a></li>
+            </ul>
         </section>
-        <section>
-            <h2></h2>
-            <hr>
-            <p></p>
+        <!--Section Job objective-->
+        <section class="cv--info">
+            <a name="job--objective"></a>
+            <h3>Job objective</h3>
+            <hr />
+            <p>Senior or Lead Front-End Developer In the future.</p>
+            <blockquote
+                cite="https://resfeber.ru/40-potryasayushhih-tsitat-stiva-dzhobsa-kotorye-vdohnovyat-vas-na-velikie-dela/">
+                <p>"We are here to contribute to this world. Otherwise, why are we here?" - Steve Jobs</p>
+            </blockquote>
         </section>
-        <section>
-            <h2></h2>
-            <hr>
-            <p></p>
+        <!--Section Skills-->
+        <section class="cv--info">
+            <a name="skills"></a>
+            <h3>Skills</h3>
+            <hr />
+            <ul>
+                <li>C#</li>
+                <li>HTML/CSS</li>
+                <li>Studying Java-Script</li>
+                <li>MS Sql</li>
+                <li>Git</li>
+                <li><a href="https://github.com/denezhkinia">Github repository</a></li>
+            </ul>
+            Link to my training and stand-alone projects in the Github repository:<a
+                href="https://github.com/denezhkinia">Github repository</a>
         </section>
-        <section>
-            <h2></h2>
-            <hr>
-            <p></p>
+        <!--Section Study-->
+        <section class="cv--info">
+            <a name="study"></a>
+            <h3>Study</h3>
+            <hr />
+            <h4>University</h4>
+            <p>
+                2015 Moscow State University of Technologies «STANKIN», Information Technology,
+                Automation of technological processes and production in mechanical engineering,
+                Software engineer
+            </p>
+            <article>
+                <p>
+                    It was the most inspiring time for me.
+                </p>
+            </article>
         </section>
-        <section>
-            <h2></h2>
-            <hr>
-            <p></p>
+        <!--Section Language-->
+        <section class="cv--info">
+            <a name="language"></a>
+            <h3>Language</h3>
+            <hr />
+            <p>English B2</p>
         </section>
     </main>
     <footer>
