--- a/index.html
+++ b/index.html
@@ -94,6 +94,19 @@
             <p>English B2</p>
         </section>
     </main>
+    <footer>
+        <a href="https://rs.school/js/">
+            <figure>
+                <img src="/img/rs_school_js.svg" alt="Изображение логотипа RS School">
+            </figure>
+        </a>
+        <a href="https://github.com/denezhkinia">
+            <figure>
+                <img src="/img/git.svg" alt="зображение логотипа GitHub">
+            </figure>
+        </a>
+
+    </footer>
 </body>
 
 </html>
