fix: loading css and img

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
     <title>Curriculum vitae</title>
 </head>
 
 <body>
     <nav>
         <figure>
-            <img class='nav--foto' src="/img/foto.JPG" alt="Фото Денежкина Ильи">
+            <img class='nav--foto' src="img/foto.JPG" alt="Фото Денежкина Ильи">
             <figcaption>
                 <h2>Ilya</h2>
                 <h2>Denezhkin</h2>
@@ -97,12 +97,12 @@
     <footer>
         <a href="https://rs.school/js/">
             <figure>
-                <img src="/img/rs_school_js.svg" alt="Изображение логотипа RS School">
+                <img src="img/rs_school_js.svg" alt="Изображение логотипа RS School">
             </figure>
         </a>
         <a href="https://github.com/denezhkinia">
             <figure>
-                <img src="/img/git.svg" alt="зображение логотипа GitHub">
+                <img src="img/git.svg" alt="зображение логотипа GitHub">
             </figure>
         </a>
 
