--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <!--Section Contacts-->
         <section class="cv--info">
-            <a name="contacts"></a>
+            <a name="contacts" href="#"></a>
             <h3>Contacts</h3>
             <hr />
             <ul>
@@ -43,8 +43,8 @@
             </ul>
         </section>
         <!--Section Job objective-->
-        <section class="cv--info">
-            <a name="job--objective"></a>
+        <section class="cv--info" href="#">
+            <a name="job--objective" href="#"></a>
             <h3>Job objective</h3>
             <hr />
             <p>Senior or Lead Front-End Developer In the future.</p>
@@ -55,7 +55,7 @@
         </section>
         <!--Section Skills-->
         <section class="cv--info">
-            <a name="skills"></a>
+            <a name="skills" href="#"></a>
             <h3>Skills</h3>
             <hr />
             <ul>
@@ -71,7 +71,7 @@
         </section>
         <!--Section Study-->
         <section class="cv--info">
-            <a name="study"></a>
+            <a name="study" href="#"></a>
             <h3>Study</h3>
             <hr />
             <h4>University</h4>
@@ -81,13 +81,13 @@
                 Software engineer
             </p>
             <article>
-                <p>
+                <h4>
                     It was the most inspiring time for me.
-                </p>
+                </h4>
             </article>
         </section>
         <!--Section Language-->
-        <section class="cv--info">
+        <section class="cv--info" href="#">
             <a name="language"></a>
             <h3>Language</h3>
             <hr />
