--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             </article>
         </section>
         <!--Section Language-->
-        <section class="cv--info" href="#">
-            <a name="language"></a>
+        <section class="cv--info">
+            <a name="language" href="#"></a>
             <h3>Language</h3>
             <hr />
             <p>English B2</p>
