--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header>
         <!--Section Contacts-->
         <section class="cv--info">
-            <a name="contacts" href="#"></a>
+            <a id="contacts" href="#"></a>
             <h3>Contacts</h3>
             <hr />
             <ul>
@@ -43,8 +43,8 @@
             </ul>
         </section>
         <!--Section Job objective-->
-        <section class="cv--info" href="#">
-            <a name="job--objective" href="#"></a>
+        <section class="cv--info">
+            <a id="job--objective" href="#"></a>
             <h3>Job objective</h3>
             <hr />
             <p>Senior or Lead Front-End Developer In the future.</p>
@@ -55,7 +55,7 @@
         </section>
         <!--Section Skills-->
         <section class="cv--info">
-            <a name="skills" href="#"></a>
+            <a id="skills" href="#"></a>
             <h3>Skills</h3>
             <hr />
             <ul>
@@ -71,7 +71,7 @@
         </section>
         <!--Section Study-->
         <section class="cv--info">
-            <a name="study" href="#"></a>
+            <a id="study" href="#"></a>
             <h3>Study</h3>
             <hr />
             <h4>University</h4>
@@ -88,7 +88,7 @@
         </section>
         <!--Section Language-->
         <section class="cv--info">
-            <a name="language" href="#"></a>
+            <a id="language" href="#"></a>
             <h3>Language</h3>
             <hr />
             <p>English B2</p>
